--- a/challenge5.html
+++ b/challenge5.html
@@ -47,19 +47,37 @@
 		<img class = "preview" 
 			tabindex = "0"  
 		
-			alt = "Styling with a Bandana" 
-			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon.jpg">
+			alt = "Chicken" 
+			src = "../image/chicken.png">
 	
 		<img class = "preview" 
 			tabindex = "0"  
-			alt = "With My Boy" 
-			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon2.JPG">
+			alt = "food" 
+			src = "../image/food.jpg">
 	
 		<img class = "preview" 
 			tabindex = "0"  
 		
-			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon3.jpg" 
-			alt = "Young Puppy">
+			src = "../image/nacho.jpg" 
+			alt = "nacho">
+
+		<img class = "preview" 
+			tabindex = "0"  
+		
+			src = "../image/otto.png" 
+			alt = "Otto">
+
+		<img class = "preview" 
+			tabindex = "0"  
+		
+			src = "../image/syracuse.jpg" 
+			alt = "Syracuse">
+
+		<img class = "preview" 
+			tabindex = "0"  
+		
+			src = "../image/water.jpg" 
+			alt = "Water">
 
 	<script src = "js/challenge1.js"></script>
 	<script type = "text/javascript">
@@ -72,6 +90,14 @@
 				}
 			)
 			$("img").on('mouseleave',
+				function(){
+
+			})
+			$("img").on('focus',
+				function(){
+
+			})
+			$("img").on('blur',
 				function(){
 
 			})
